21/22 APIs PASS, final uth-service